<resources>
    <string name="app_name">Task</string>
    <string name="time">计时</string>
    <string name="image_video">图片或视频</string>
    <string name="describe">说明</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sound">铃声</string>
    <string name="shock">震动</string>
    <string name="comment">说明</string>
    <string name="defaultSound">默认</string>
    <string name="select">选择</string>
    <string name="step_name">命名</string>
    <string name="media">图片、音频、视频</string>
    <string name="preview">预览</string>
    <string name="remove">删除</string>
    <string name="cancel">取消</string>
    <string name="start">开始</string>
    <string name="end">结束</string>
    <string name="edit">编辑</string>
</resources>
