<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jaqen.task.TaskEditActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_dark">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginBottom="8dp"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            android:fitsSystemWindows="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"/>

        <android.support.v7.widget.GridLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:background="@android:color/background_light"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="0dp"
            app:columnCount="3"
            app:layout_constraintVertical_bias="1.0">


            <TextView
                android:id="@+id/lbTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"
                app:layout_gravity="center"/>

            <TextView
                android:id="@+id/lbMedia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image_video"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"
                app:layout_gravity="center"/>

            <TextView
                android:id="@+id/lbDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/describe"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"
                app:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"
                app:layout_gravity="center">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="00:00:00"/>
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_input_add"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1"
                app:layout_gravity="center"/>

            <EditText
                android:id="@+id/editText6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name"
                app:layout_rowWeight="1"
                app:layout_columnWeight="1"
                app:layout_gravity="center"/>
        </android.support.v7.widget.GridLayout>
    </android.support.constraint.ConstraintLayout>
</layout>
