<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jaqen.task.fragments.MediaSelectFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:background="@android:color/transparent"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/btnPreview"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:layout_constraintTop_toTopOf="@+id/guideline2"/>

        <Button
            android:id="@+id/btnRemove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:background="@android:color/transparent"
            android:text="@string/remove"
            android:textColor="@color/textColorPrimary"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/btnPreview"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            app:layout_constraintVertical_bias="0.5"/>

        <Button
            android:id="@+id/btnPreview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="0dp"
            android:background="@android:color/transparent"
            android:text="@string/preview"
            android:textColor="@color/textColorPrimary"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/btnRemove"
            app:layout_constraintRight_toLeftOf="@+id/btnCancel"
            app:layout_constraintTop_toTopOf="@+id/guideline2"
            app:layout_constraintVertical_bias="0.5"/>

        <ImageView
            android:id="@+id/btnAudio"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:srcCompat="@drawable/ic_audio"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/btnVideo"
            app:layout_constraintLeft_toRightOf="@+id/btnVideo"
            app:layout_constraintTop_toTopOf="@+id/btnVideo"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintVertical_bias="0.0"/>

        <ImageView
            android:id="@+id/btnVideo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:srcCompat="@drawable/ic_video"
            app:layout_constraintLeft_toRightOf="@+id/btnImg"
            app:layout_constraintBottom_toBottomOf="@+id/btnImg"
            app:layout_constraintTop_toTopOf="@+id/btnImg"
            app:layout_constraintRight_toLeftOf="@+id/btnAudio"
            app:layout_constraintDimensionRatio="w,1:1"
            android:layout_marginLeft="32dp"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"/>

        <ImageView
            android:id="@+id/btnImg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintRight_toLeftOf="@+id/btnVideo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_image"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintDimensionRatio="h,1:1"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:background="@android:color/darker_gray"
            android:layout_marginRight="0dp"
            app:layout_constraintRight_toRightOf="@+id/btnAudio"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/btnImg"
            app:layout_constraintBottom_toTopOf="@+id/btnCancel"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintTop_toTopOf="@+id/guideline2"/>

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline2"
            app:layout_constraintGuide_percent="0.7"
            android:orientation="horizontal"/>
    </android.support.constraint.ConstraintLayout>
</layout>


